Always call setActive() in WebViewImpl::setFocus(), not just when enabling focus. https://bugs.webkit.org/show_bug.cgi?id=65220

Reviewed by Darin Fisher.

* WebKit.gyp:
* WebKit.gypi:
* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::setFocus):
* tests/FrameTestHelpers.cpp: Added, refactored out of WebFrameTest.cpp.
(WebKit::FrameTestHelpers::registerMockedURLLoad):
(WebKit::FrameTestHelpers::loadFrame):
(WebKit::FrameTestHelpers::defaultWebFrameClient):
(WebKit::FrameTestHelpers::defaultWebViewClient):
(WebKit::FrameTestHelpers::createWebViewAndLoad):
* tests/FrameTestHelpers.h: Added, refactored out of WebFrameTest.cpp.
* tests/WebFrameTest.cpp:
* tests/WebViewTest.cpp: Added.


Canonical link: https://commits.webkit.org/85669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96912 268f45cc-cd09-0410-ab3c-d52691b4dbfc